<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sabutos.dictionary.activities.SingleItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#000000"
            android:text="@string/word"
            android:textStyle="bold"
            android:background="@drawable/custom_textview"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/textView1" />
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView6"
            android:text="বাংলা অর্থ: "
            android:layout_below="@+id/textView1"/>
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:layout_marginLeft="10sp"
            android:text=""
            android:id="@+id/textView7"
            android:layout_marginBottom="10sp"
            android:layout_below="@+id/textView6"/>
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:text="@string/synonyms"
            android:textStyle="bold"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView7"/>
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:layout_marginTop="10sp"
            android:text="@string/synonyms"
            android:id="@+id/textView2"
            android:layout_marginBottom="10sp"
            android:layout_below="@+id/textView9"/>
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#000000"
            android:text="@string/example"
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_marginBottom="10sp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:text="@string/example_words"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25sp" />

        <TextView
            android:id="@+id/textView8"
            android:text="type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</ScrollView>
